[project]
name = "pj1"
version = "0.0.1"
description = ""
authors = [
    {name = "hotdog-zz", email = "21307130044@m.fudan.edu.cn"},
]
dependencies = ["numpy", "matplotlib"]
requires-python = "==3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

